prom-ing/monitoring-ingress.yml
# IngressRoute https
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: monitoring-https
  namespace: monitoring
spec:
  entryPoints:
    - websecure
    - web
  routes:
  - kind: Rule
    match: Host(`192.168.1.153.traefik.me`) && PathPrefix(`/prometheus`)
    services:
    - name: kube-prometheus-stack-prometheus
      port: 9090
      namespace: monitoring
    middlewares:     
      - name: stripprefix
        namespace: monitoring
  - kind: Rule
    match: Host(`192.168.1.153.traefik.me`) && PathPrefix(`/alertmanager`)
    services:
    - name: kube-prometheus-stack-alertmanager
      port: 9093
      namespace: monitoring
    middlewares:    
      - name: stripprefix
        namespace: monitoring
  - kind: Rule
    match: Host(`192.168.1.153.traefik.me`) && PathPrefix(`/grafana`)
    services:
    - name: kube-prometheus-stack-grafana
      port: 80
      namespace: monitoring
    middlewares:
      - name: stripprefix
        namespace: monitoring
  tls:
    secretName: monitoring-secret
